err/ninopianino.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/MIDIUtil-1.1.3.egg-info'...
Listing './lib/python3.5/site-packages/midiutil'...
Listing './lib/python3.5/site-packages/ninopianino'...
Compiling './lib/python3.5/site-packages/ninopianino/block_to_generator.py'...
***   File "./lib/python3.5/site-packages/ninopianino/block_to_generator.py", line 48
    print dir(self)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ninopianino/music_models.py'...
***   File "./lib/python3.5/site-packages/ninopianino/music_models.py", line 122
    print 'No markov values found, but tried to generate using Markov chains. '
                                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ninopianino/note_timing.py'...
***   File "./lib/python3.5/site-packages/ninopianino/note_timing.py", line 36
    print 'Length exceeded!'
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ninopianino/song_generator.py'...
***   File "./lib/python3.5/site-packages/ninopianino/song_generator.py", line 127
    print 'Instruments for ', segment['track'], ' are : ', segment_instruments, ' and should have : ', number_segment_instruments
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ninopianino/template_utils.py'...
***   File "./lib/python3.5/site-packages/ninopianino/template_utils.py", line 49
    print 'The sum is : ', sum(x[1] for x in key_candidates_probabilities)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ninopianino-0.1.12.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyhaikunator-0.0.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
